# odoo-cloud-synchronizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
server/src/: auth.py  authorized_routers.py  cache.py  cached_redirect.py  checkers.py  database.py  dependencies.py  main.py  responses.py  unauthorized_routers.py  yandex.py
src/: auth.py  database.py  dependencies.py  main.py  odoo.py  responses.py  syncer.py  yandex.py
